--- a/doc/Tutorial.ipynb
+++ b/doc/Tutorial.ipynb
@@ -43,7 +43,7 @@
     "For a given system, integrative modeling files are stored in different servers:\n",
     "\n",
     "- source code is stored in a github repository (e.g., https://github.com/integrativemodeling/npc2018) \n",
-    "- data files are stored in the Zenodo data server (e.g., https://zenodo.org/record/1194547#.W02gVq3v5UQ)\n",
+    "- data files are stored in the Zenodo data server (e.g., https://zenodo.org/record/3523241#.XbqXJJwo9UQ)\n",
     "- structures are stored in the pdb-dev server (e.g., https://pdb-dev.wwpdb.org/)"
    ]
   },
@@ -56,6 +56,9 @@
     "mass spectrometry (XLMS) combined with comparative models of all subunits. In the second part we will include also cryo-electron microscopy (cryoEM). We will try\n",
     "to determine the architecture of the complex,\n",
     "hypothesizing that we know the architecture of the core, and aiming to localize the position of C53, C37, C34, C82, and C31. The example can be easily generalized to any other set of subunits.\n",
+    "\n",
+    "> The quoted text (grey lateral bar) refers to the EM modeling parts, and can be skipped if the modelling is performed only using crosslinks\n",
+    "\n",
     "\n",
     "IMP.pmi references\n",
     "\n",
@@ -243,24 +246,64 @@
     "\n",
     "defines two chains with unique IDs of P20434 and P20435 respectively.  The entire complex is 17 chains and 6263 residues.\n",
     "\n",
-    "**Electron Density Map**  \n",
+    "> **Electron Density Map**  \n",
     "The electron density map of the entire RNA Poly III complex is at 10 Angstrom resolution.  The raw data file for this is stored in `emd_1804_10A_2010.mrc`.\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_em_raw.png\" width=\"200px\" />\n",
-    "<figcaption>_Electron microscopy density map for yeast RNA Polymerase III_</figcaption></figure>\n",
+    "> <figure><img src=\"files/images/rnapoliii_cryoEM.png\" width=\"300px\" />\n",
+    "<figcaption>_Electron microscopy density map for yeast RNA Polymerase III at 10 Ang resolution (emd 1804)_</figcaption></figure>\n",
+    "    \n",
+    "> **Electron Density as Gaussian Mixture Models**  \n",
+    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of gaussians, and are stored in the `*_gmm.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  See below for explanation on how to generate GMM and how to analyse them.\n",
     "\n",
-    "**Electron Density as Gaussian Mixture Models**  \n",
-    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of gaussians, and are stored in the `*_gmm.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  \n",
+    "> <figure><img src=\"files/images/rnapoliii_gmm1.png\" width=\"300px\" />\n",
+    "> <figcaption>_The EM data represented as a 50 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_em_gmm_50.png\" width=\"200px\" />\n",
-    "<figcaption>_The EM data represented as a 50 Gaussian mixture model_</figcaption></figure>\n",
+    "---\n",
+    "\n",
+    "> <figure><img src=\"files/images/rnapoliii_gmm2.png\" width=\"300px\" />\n",
+    "> <figcaption>_The EM data represented as a 200 Gaussian mixture model_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "> <figure><img src=\"files/images/rnapoliii_gmm3.png\" width=\"300px\" />\n",
+    "> <figcaption>_The EM data represented as a 800 Gaussian mixture model_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "> <figure><img src=\"files/images/rnapoliii_gmm4.png\" width=\"300px\" />\n",
+    "> <figcaption>_The EM data represented as a 3200 Gaussian mixture model_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "> <figure><img src=\"files/images/rnapoliii_gmm5.png\" width=\"300px\" />\n",
+    "> <figcaption>_The EM data represented as a 12797 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "\n",
     "**PDB File**  \n",
     "High resolution coordinates for all 17 chains of RNA Pol III are found in `.pdb` files.  \n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_all_1wc4.png\" width=\"200px\" />\n",
-    "<figcaption>_Coordinates from PDBID [1WCM](http://www.rcsb.org/pdb/explore.do?structureId=1wcm)_</figcaption></figure>\n",
+    "<figure><img src=\"files/images/rnapoliii_native.png\" width=\"300px\" />\n",
+    "<figcaption>_Native structure of Pol III [5FJA](http://www.rcsb.org/pdb/explore.do?structureId=5FJA)_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_core_homology.png\" width=\"300px\" />\n",
+    "<figcaption>_Homology model of the core of Pol III based on [4C3I](http://www.rcsb.org/pdb/explore.do?structureId=4C3I)_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_C82_homology.png\" width=\"300px\" />\n",
+    "<figcaption>_Homology model of C82 based on [2XUB](http://www.rcsb.org/pdb/explore.do?structureId=2XUB)_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_C37_C53_homology.png\" width=\"300px\" />\n",
+    "<figcaption>_Homology models of the C37 C53 heterodimer based on [4C3I](http://www.rcsb.org/pdb/explore.do?structureId=4C3I)_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_C34_homology.png\" width=\"300px\" />\n",
+    "<figcaption>_Homology model of three domains of C34 based on [2DK8](http://www.rcsb.org/pdb/explore.do?structureId=2DK8)_, [2DK5](http://www.rcsb.org/pdb/explore.do?structureId=2DK5)_, [1LDD](http://www.rcsb.org/pdb/explore.do?structureId=1LDD)_</figcaption></figure>\n",
     "\n",
     "**Chemical Cross-Links**  \n",
     "All chemical cross-linking data is located in `FerberKosinski2016_apo.csv` and `FerberKosinski2016_apo.csv`.  These files contain multiple comma-separated columns; four of these specify the protein and residue number for each of the two linker residues. The length of the DSS/BS3 cross-linker reagent, 21 angstroms, will be specified later in the modeling script.  "
@@ -281,7 +324,7 @@
     "\n",
     "Very generally, the *representation* of a system is defined by all the variables that need to be determined based on input information, including the assignment of the system components to geometric objects (e.g. points, spheres, ellipsoids, and 3D Gaussian density functions). \n",
     "\n",
-    "Our RNA Pol II representation employs **spherical beads** of varying sizes and **3D Gaussians**, which coarsen domains of the complex using several resolution scales simultaneously. Here below we show the representation for the Pol II case, but the same applies to Pol III.\n",
+    "Our RNA Pol II representation employs **spherical beads** of varying sizes and **3D Gaussians** (if the EM data is integrated), which coarsen domains of the complex using several resolution scales simultaneously. Here below we show the representation for the Pol II case, but the same applies to Pol III.\n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_Multi-scale_representation.png\" width=\"600px\" />\n",
     "<figcaption>_Multi-scale representation of Rpb1 subunit of RNA Pol II_</figcaption></figure>\n",
@@ -985,8 +1028,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<figure><img src=\"files/images/rnapolii_domain_representation.png\" width=\"600px\" />\n",
-    "<figcaption>_Domain Representation_</figcaption></figure>"
+    "<figure><img src=\"files/images/rnapoliii_representation_total.png\" width=\"300px\" />\n",
+    "<figcaption>_Domain Representation of the whole complex in its final modelled conformation_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_representation_core.png\" width=\"300px\" />\n",
+    "<figcaption>_Domain Representation of the core_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_representation_c31.png\" width=\"300px\" />\n",
+    "<figcaption>_Domain Representation of C31_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_representation_c34.png\" width=\"300px\" />\n",
+    "<figcaption>_Domain Representation of C34_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_representation_c53_c37.png\" width=\"300px\" />\n",
+    "<figcaption>_Domain Representation of C53/C37 heterodimer_</figcaption></figure>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_representation_c82.png\" width=\"300px\" />\n",
+    "<figcaption>_Domain Representation of C82_</figcaption></figure>\n"
    ]
   },
   {
@@ -1187,7 +1255,10 @@
    "source": [
     "We randomize the initial configuration to remove any bias from the initial starting configuration read from input files. Since each subunit is composed of rigid bodies (i.e., beads constrained in a structure) and flexible beads, the configuration of the system is initialized by displacing each mobile rigid body and each bead randomly by 50 Angstroms, rotating them randomly, and moving them far enough from each other to prevent any steric clashes. \n",
     "\n",
-    "The `excluded_rigid_bodies=fixed_rbs` will exclude from the randomization everything that was fixed above."
+    "The `excluded_rigid_bodies=fixed_rbs` will exclude from the randomization everything that was fixed above. After running the code below, the system looks like this:\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_initial.png\" width=\"600px\" />\n",
+    "<figcaption>_Initial random configuration_</figcaption></figure>"
    ]
   },
   {
