Add more descriptive text/images for analysis

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -14,7 +14,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction"
+    "In this tutorial we will look at the output from the previous tutorial, modeling with cross-links and EM data. This follows the protocol described in more detail in [Viswanath *et al.*, \"Assessing Exhaustiveness of Stochastic Sampling for Integrative Modeling of Macromolecular Structures\". Biophys J **113**, 2344-2353, 2017](https://www.ncbi.nlm.nih.gov/pubmed/29211988)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get precalculated outputs\n",
+    "\n",
+    "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.).\n",
+    "\n",
+    "This file contains RMF and stat file outputs for longer Monte Carlo runs using the previously-demonstrated script, with multiple replicas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls imp_tutorial_pol3_xl_cryoem_premodeling/modeling/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that there are three output directories. This is because the protocol was run three times, each time with a finer EM map (more GMMs). For more information, see [Bonomi *et al.*, \"Bayesian weighing of electron cryo-microscopy data for integrative structural modeling\". Structure, pii: S0969-2126(18)30337-X, 2018](https://www.ncbi.nlm.nih.gov/pubmed/30393052).\n",
+    "\n",
+    "For the purposes of this tutorial we'll look at the final (shortest) trajectory, `A_output_3`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3/rmfs/"
    ]
   },
   {
@@ -26,13 +64,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The scripts for this protocol assume that the outputs are stored in a particular directory structure, i.e. `<top directory>/<run number>/output/` so we first need to make a symlink to the precalculated outputs:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mkdir -p modeling/run1\n",
-    "ln -sf ../../../../../imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3 \\\n",
+    "ln -sf ../../imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3 \\\n",
     "       modeling/run1/output"
    ]
   },
@@ -40,23 +85,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at score distributions"
+    "The `select_good_scoring_models.py` script filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
+    "\n",
+    "In this script, required flags are:\n",
+    " - `-rd`, which specifies the directory containing sampling output folders\n",
+    "   (`modeling` in this case, to match the symlink we created above);\n",
+    " - `-rp`, which defines the prefix for the sampling output folders (`run` in this case as per the symlink);\n",
+    " - `-sl`, which defines the stat file keywords (see below) that we wish to filter on;\n",
+    " - `-pl`, which specifies the keywords that will be written to the output file;\n",
+    " - `-alt` and `-aut`, which specify, respectively, the lower and upper threshold for each keyword in `-slt` hat define acceptance.\n",
+    "\n",
+    "The `-mlt` and `-mut` keywords, which are optional, define thresholds for restraints made\n",
+    "of multiple components (such as crosslinks).\n",
+    "\n",
+    "\\note A list of acceptable stat file keywords can be determined by running\n",
+    "      `../scripts/plot_stat.py ./path/to/stat/file -pk`\n",
+    "\n",
+    "Here, we first use crosslink satisfaction as an initial filtering criterion because we usually have an *a priori* estimate of the false positive rate and/or cutoff distance (for scores whose thresholds are not known *a priori*,\n",
+    "one can perform a multi-stage filtering process as outlined in the above protocol). Here, we only accept models with at least 90% of the cross-links satisfied by setting `-alt` to 0.9 and `-aut` to 1.0. A crosslink is considered satisfied if the distance is between 0.0 and 30.0 Å, as delineated by the `-mlt` and `-mut` keywords, respectively. We ask that connectivity, crosslink data score, excluded volume, EM, and total scores be printed as well.\n",
+    "\n",
+    "This script can be run from the cell below (it takes about 40s to run)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['CrossLinkingMassSpectrometryRestraint_Distance_']\n",
-      "Model score file at ./filter/model_ids_scores.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "python scripts/select_good_scoring_models.py \\\n",
     "    -rd modeling -rp run \\\n",
@@ -73,31 +128,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the distribution of the EM score"
+    "This script creates a directory `filter` and a file,\n",
+    "`filter/models_scores_ids.txt`, that contains the model index, its run,\n",
+    "replicaID, frame ID, scores, and sample ID for each model:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"scripts/plot_score.py\", line 5, in <module>\n",
-      "    import os,sys,string,pandas\n",
-      "ModuleNotFoundError: No module named 'pandas'\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "head filter/model_ids_scores.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now use the script `plot_score.py` to plot the distribution of the EM, connectivity\n",
+    "and excluded volume scores from this first set of filtered models to\n",
+    "determine a reasonable threshold for accepting or rejecting a model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "python scripts/plot_score.py \\\n",
     "    filter/model_ids_scores.txt \\\n",
@@ -105,10 +163,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python scripts/plot_score.py \\\n",
+    "    filter/model_ids_scores.txt \\\n",
+    "    ConnectivityRestraint_ABC10alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python scripts/plot_score.py \\\n",
+    "    filter/model_ids_scores.txt \\\n",
+    "    ExcludedVolumeSphere_None"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Determine thresholds, rerun model selection"
+    "We can see that the EM score is approximately Gaussian, with a long tail:\n",
+    "\n",
+    "<img src=\"ExcludedVolumeSphere_None.jpg\" width=300px title=\"Connectivity score distribution\" /> <img src=\"ConnectivityRestraint_ABC10alpha.jpg\" width=300px title=\"Connectivity score distribution\" /> <img src=\"GaussianEMRestraint_Total.jpg\" width=300px title=\"EM score distribution\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting histograms are roughly Gaussian. Based on these distributions we can set our criteria for good scoring models, generally to some value below the mean (e.g. 1 standard deviation) except for connectivity which appears well satisfied in almost all models. For this demonstration we filter on the EM and excluded volume scores, with high score thresholds of 5450 and 90 respectively.\n",
+    "\n",
+    "Note that currently, the choice of filtering criteria is very subjective. Ideally, a fully Bayesian framework will allow for objective weighting of different restraints and allow for filtering at single likelihood. Until then, the choice of a score or parameter that represents a \"good scoring model\" should be carefully thought out by the modeler and reported in the text.\n",
+    "\n",
+    "We rerun `select_good_scoring_models.py` adding the extra keywords and\n",
+    "score thresholds. These thresholds return 1671 good scoring models.\n",
+    "\n",
+    "In general, we require at least 1000 or more models for assessing sampling exhaustiveness. Our score thresholds were chosen in order to have a reasonable number (1000-20000) models for analysis. If we have too few models, the satisfaction criteria should be relaxed, or more sampling should be performed to find more satisfactory models. Too many models (\\>20,000) will make subsequent processing more computationally intensive; in this case satisfaction criteria can be made stricter, or one can pass a random subset of these models to the sampling convergence protocol."
    ]
   },
   {
@@ -121,18 +217,78 @@
     "    -rd modeling -rp run \\\n",
     "    -sl CrossLinkingMassSpectrometryRestraint_Distance_ \\\n",
     "        GaussianEMRestraint_Total \\\n",
+    "        ExcludedVolumeSphere_None \\\n",
     "    -pl ConnectivityRestraint_ABC10alpha \\\n",
     "        CrossLinkingMassSpectrometryRestraint_Data_Score_XL \\\n",
-    "        ExcludedVolumeSphere_None \\\n",
     "        Total_Score \\\n",
-    "    -alt 0.9 -50 -aut 1.0 5440 -mlt 0.0 0.0 -mut 30.0 0.0 -e"
+    "    -alt 0.9 -50 -50 -aut 1.0 5450 90 \\\n",
+    "    -mlt 0.0 0.0 0.0 -mut 30.0 0.0 0.0\n",
+    "    \n",
+    "wc -l filter/model_ids_scores.txt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make density_ranges.txt. Run sampling exhaustiveness script"
+    "# Determining sampling precision, clustering, and computing localization densities {#sampprec}\n",
+    "\n",
+    "The `Master_Sampling_Exhaustiveness_Analysis.py` script is used to\n",
+    "calculate the sampling precision of the modeling. During this step,\n",
+    "multiple tests for convergence are performed on the two samples\n",
+    "determined above, models are clustered, and localization densities are computed.\n",
+    "\n",
+    "The script first needs a file, `density_ranges.txt`, that defines components\n",
+    "using PMI selection tuples on which we calculate localization densities.\n",
+    "Here, we create three localization densities for the C82, C34 and C31 subunits of the complex."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "cat <<END > density_ranges.txt\n",
+    "density_custom_ranges={\n",
+    "    'C82':['C82'],\n",
+    "    'C34':['C34'],\n",
+    "    'C31':['C31'] }\n",
+    "END"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "⚠️ This cell takes about 30 minutes to run!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python scripts/select_good_scoring_models.py \\\n",
+    "    -rd modeling -rp run \\\n",
+    "    -sl CrossLinkingMassSpectrometryRestraint_Distance_ \\\n",
+    "        GaussianEMRestraint_Total \\\n",
+    "        ExcludedVolumeSphere_None \\\n",
+    "    -pl ConnectivityRestraint_ABC10alpha \\\n",
+    "        CrossLinkingMassSpectrometryRestraint_Data_Score_XL \\\n",
+    "        Total_Score \\\n",
+    "    -alt 0.9 -50 -50 -aut 1.0 5450 90 \\\n",
+    "    -mlt 0.0 0.0 0.0 -mut 30.0 0.0 0.0 -e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "⚠️ This cell takes about 90 minutes to run!"
    ]
   },
   {
@@ -150,15 +306,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
+   "display_name": "Calysto Bash",
    "language": "bash",
-   "name": "bash"
+   "name": "calysto_bash"
   },
   "language_info": {
-   "codemirror_mode": "shell",
    "file_extension": ".sh",
+   "help_links": [
+    {
+     "text": "MetaKernel Magics",
+     "url": "https://metakernel.readthedocs.io/en/latest/source/README.html"
+    }
+   ],
    "mimetype": "text/x-sh",
-   "name": "bash"
+   "name": "bash",
+   "version": "0.2.2"
   }
  },
  "nbformat": 4,
