Add images and more text, show stat keywords

--- a/rnapoliii/analysis/analysis.ipynb
+++ b/rnapoliii/analysis/analysis.ipynb
@@ -21,9 +21,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<img src=\"images/validation_pipeline.png\" width=600px title=\"Validation pipeline\" />"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Get precalculated outputs\n",
         "\n",
-        "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.).\n",
+        "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.)\n",
         "\n",
         "This file contains RMF and stat file outputs for longer Monte Carlo runs using the previously-demonstrated script, with multiple replicas."
       ]
@@ -41,7 +48,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Note that there are three output directories. This is because the protocol was run three times, each time with a finer EM map (more GMMs). For more information, see [Bonomi *et al.*, \"Bayesian weighing of electron cryo-microscopy data for integrative structural modeling\". Structure, pii: S0969-2126(18)30337-X, 2018](https://www.ncbi.nlm.nih.gov/pubmed/30393052).\n",
+        "Note that there are three output directories. This is because the protocol was run three times, each time with a better approximation to the EM map (more GMMs). For more information, see [Bonomi *et al.*, \"Bayesian weighing of electron cryo-microscopy data for integrative structural modeling\". Structure, pii: S0969-2126(18)30337-X, 2018](https://www.ncbi.nlm.nih.gov/pubmed/30393052).\n",
         "\n",
         "For the purposes of this tutorial we'll look at the final (shortest) trajectory, `A_output_3`:"
       ]
@@ -67,7 +74,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The scripts for this protocol assume that the outputs are stored in a particular directory structure, i.e. `<top directory>/<run number>/output/` so we first need to make a symlink to the precalculated outputs:"
+        "The scripts for this protocol assume that the outputs are stored in a particular directory structure, i.e. `<top directory>/<run number>/output/`, so we first need to make a symlink to the precalculated outputs:"
       ]
     },
     {
@@ -98,13 +105,27 @@
         "The `-mlt` and `-mut` keywords, which are optional, define thresholds for restraints made\n",
         "of multiple components (such as crosslinks).\n",
         "\n",
-        "\\note A list of acceptable stat file keywords can be determined by running\n",
-        "      `../scripts/plot_stat.py ./path/to/stat/file -pk`\n",
-        "\n",
+        "Note that a list of acceptable stat file keywords can be determined using the `scripts/show_stat.py` script:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "python scripts/show_stat.py modeling/run1/output/stat.0.out \\\n",
+        "       |grep -v MonteCarlo | cut -f1 -d\\| | uniq"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Here, we first use crosslink satisfaction as an initial filtering criterion because we usually have an *a priori* estimate of the false positive rate and/or cutoff distance (for scores whose thresholds are not known *a priori*,\n",
         "one can perform a multi-stage filtering process as outlined in the above protocol). Here, we only accept models with at least 90% of the cross-links satisfied by setting `-alt` to 0.9 and `-aut` to 1.0. A crosslink is considered satisfied if the distance is between 0.0 and 30.0 \u00c5, as delineated by the `-mlt` and `-mut` keywords, respectively. We ask that connectivity, crosslink data score, excluded volume, EM, and total scores be printed as well.\n",
         "\n",
-        "This script can be run from the cell below (it takes about 40s to run)."
+        "This script can be run from the cell below:"
       ]
     },
     {
@@ -188,8 +209,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We can see that the EM score is approximately Gaussian, with a long tail:\n",
-        "\n",
         "<img src=\"ExcludedVolumeSphere_None.jpg\" width=300px title=\"Connectivity score distribution\" /> <img src=\"ConnectivityRestraint_ABC10alpha.jpg\" width=300px title=\"Connectivity score distribution\" /> <img src=\"GaussianEMRestraint_Total.jpg\" width=300px title=\"EM score distribution\" />"
       ]
     },
@@ -199,10 +218,9 @@
       "source": [
         "The resulting histograms are roughly Gaussian. Based on these distributions we can set our criteria for good scoring models, generally to some value below the mean (e.g. 1 standard deviation) except for connectivity which appears well satisfied in almost all models. For this demonstration we filter on the EM and excluded volume scores, with high score thresholds of 5450 and 90 respectively.\n",
         "\n",
-        "Note that currently, the choice of filtering criteria is very subjective. Ideally, a fully Bayesian framework will allow for objective weighting of different restraints and allow for filtering at single likelihood. Until then, the choice of a score or parameter that represents a \"good scoring model\" should be carefully thought out by the modeler and reported in the text.\n",
+        "Note that currently, the choice of filtering criteria is very subjective. Another approach is to take all models after some statistically-determined \"burn in\" or equilibration period. See https://github.com/salilab/PMI_analysis for a method in development to do just this, and [Chodera, \"A Simple Method for Automated Equilibration Detection in Molecular Simulations\", J Chem Theory Comput **12**, 1799-1805, 2016](https://doi.org/10.1021/acs.jctc.5b00784) for a description of the algorithm.\n",
         "\n",
-        "We rerun `select_good_scoring_models.py` adding the extra keywords and\n",
-        "score thresholds. These thresholds return 1671 good scoring models.\n",
+        "We rerun `select_good_scoring_models.py` adding the extra keywords and score thresholds. These thresholds return 1671 good scoring models.\n",
         "\n",
         "In general, we require at least 1000 or more models for assessing sampling exhaustiveness. Our score thresholds were chosen in order to have a reasonable number (1000-20000) models for analysis. If we have too few models, the satisfaction criteria should be relaxed, or more sampling should be performed to find more satisfactory models. Too many models (\\>20,000) will make subsequent processing more computationally intensive; in this case satisfaction criteria can be made stricter, or one can pass a random subset of these models to the sampling convergence protocol."
       ]
@@ -240,7 +258,7 @@
         "\n",
         "The script first needs a file, `density_ranges.txt`, that defines components\n",
         "using PMI selection tuples on which we calculate localization densities.\n",
-        "Here, we create three localization densities for the C82, C34 and C31 subunits of the complex."
+        "Here, we ask for three localization densities for the C82, C34 and C31 subunits of the complex."
       ]
     },
     {
@@ -263,6 +281,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Note that the exhaustiveness test scripts take some time (~2 hours) to run. Thus, it is not recommended to run these scripts during the tutorial - they are presented here for completeness. Below, we show sample outputs."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "First, we rerun the selection of good scoring models script, adding the `-e` flag. This will select models as before; additionally, it will extract coordinates for these models as RMF files, placing them in the `good_scoring_models` directory. It will divide the models into two approximately-equal-sized samples, A and B. If we had multiple independent runs, it would simply choose models from different runs for the different samples. In this case, since we have only a single run, it will divide it into two random subsets.\n",
+        "\n",
         "\u26a0\ufe0f This cell takes about 30 minutes to run!"
       ]
     },
@@ -288,6 +315,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "We now run the script for testing sampling exhaustiveness. This takes a number of arguments:\n",
+        "\n",
+        " - `-n` defines the labels (`rnapoliii`) for the output files.\n",
+        " - `-a` aligns all models before calculating pairwise RMSD (this may not be necessary when models are already aligned, for example when they are already aligned to a good quality EM map).\n",
+        " - `-g` determines the step size in \u00c5 for calculating sampling precision. (This is the step size at which clustering is performed between the minimum and maximum RMSDs in the dataset. Here we use 0.1\u00c5 to get a very precise estimate of the sampling precision; however this results in a very long calculation. In practice, especially for larger systems whose sampling precision will be much lower, one would choose a larger value to make calculation more efficient.)\n",
+        " - `-m cpu_omp` and `-c N` run the RMSD calculation in parallel, where N is the number of processors. (The GPU mode of pyRMSD generally increases performance significantly. It is invoked by using `-m cuda`.)\n",
+        " - `-p` defines the path to the good scoring model directory.\n",
+        " - `-gp` will generate plots using `gnuplot`.\n",
+        "\n",
         "\u26a0\ufe0f This cell takes about 90 minutes to run!"
       ]
     },
@@ -299,8 +335,15 @@
       "source": [
         "python scripts/Master_Sampling_Exhaustiveness_Analysis.py \\\n",
         "       -n rnapoliii -p good_scoring_models/ \\\n",
-        "       -d density_ranges.txt -m cpu_omp \\\n",
-        "       -c 8 -a -g 0.1 -gp"
+        "       -d density_ranges.txt -m cpu_omp -c 8 \\\n",
+        "       -a -g 0.1 -gp"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"images/clustering.png\" width=600px title=\"Clustering\" />"
       ]
     }
   ],
