--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -824,11 +824,18 @@
     "First the EM map is approximated with a Gaussian Mixture Model (GMM, done separately).\n",
     "Second, the components of the model are represented with Gaussians (forming the model GMM).\n",
     "\n",
-    "> * `scale_target_to_mass` ensures the total mass of model and map are identical\n",
     "> * `slope`: nudge model closer to map when far away\n",
     "> * `weight`: heuristic, needed to calibrate the EM restraint with the other terms. \n",
     "\n",
-    "> and then add it to the Model and output objects."
+    "> and then add it to the Model and output objects.\n",
+    "> The restraint is fully described in this paper [Bonomi et al. 2018](https://salilab.org/pdf/Bonomi_Structure_2018.pdf)\n",
+    "\n",
+    "> The GMMs are computed using an adapted version of [gmconvert](https://pdbj.org/gmfit/doc_gmconvert/README_gmconvert.html) which exploits a divide and conquer approach [recursive-gmconvert](https://gitlab.pasteur.fr/rpellari/recursive-gmconvert).\n",
+    "\n",
+    "> The GMMs are computed using increasing number of gaussians. The optimal value of gaussians is chosen as the one that reproduces the same resolution as the original map.\n",
+    "\n",
+    "> <figure><img src=\"files/images/resolution_analysis.png\" width=\"600px\" />\n",
+    "> <figcaption>_Searching for the optimal number of gaussians. Left. the Fourier Shell Correlation is computed between the experimental map and the GMM (each curve has different number of components. Right. Resolution against the number of components_</figcaption></figure>"
    ]
   },
   {
@@ -902,6 +909,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> The cryoEM modeling is slightly different. It uses an iterative approach where the model is refined using gmms with increasing number of components. At the end of each calculation a seed is generated (see below), and used to start a new modeling run.\n",
+    "\n",
+    "> <figure><img src=\"files/images/rnapoliii_sampling_cryoem.png\" width=\"600px\" />\n",
+    "> <figcaption>_Iterative refined based on seeding and increasing the components in the GMM_</figcaption></figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Modeling Output <a name=\"Output_3\"></a>\n",
     "\n",
     "The script generates an output directory containing the following:\n",
@@ -961,8 +978,8 @@
     "\n",
     "%pylab inline\n",
     "\n",
-    "p0=IMP.atom.Selection(hh,molecule=\"Rpb4\",residue_index=10).get_selected_particles()[0]\n",
-    "p1=IMP.atom.Selection(hh,molecule=\"Rpb7\",residue_index=10).get_selected_particles()[0]\n",
+    "p0=IMP.atom.Selection(hh,molecule=\"C31\",residue_index=10).get_selected_particles()[0]\n",
+    "p1=IMP.atom.Selection(hh,molecule=\"C34\",residue_index=10).get_selected_particles()[0]\n",
     "\n",
     "d0=IMP.core.XYZ(p0)\n",
     "d1=IMP.core.XYZ(p1)\n",
@@ -1003,9 +1020,8 @@
     "\n",
     "figure() \n",
     "\n",
-    "# finally we plot the crosslink score and the distance of two crosslinked residues\n",
-    "plot([float(x.features[\"CrossLinkingMassSpectrometryRestraint_Data_Score_Chen\"]) for x in data]);\n",
-    "plot([float(x.features[\"CrossLinkingMassSpectrometryRestraint_Distance_|Trnka|103.1|Rpb1|1|Rpb1|343|0|PSI|\"]) for x in data]);\n",
+    "# finally we plot the distance of two crosslinked residues\n",
+    "plot([float(x.features[\"CrossLinkingMassSpectrometryRestraint_Score_|XL|29.APO.1|C31|91|C160|1458|0|CLASS_0|\"]) for x in data]);\n",
     "\n"
    ]
   },
@@ -1013,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additionally, we can draw the box-plot for all crosslink distances involving Rpb7 and Rpb4"
+    "Additionally, we can draw the scatter plot between ld-Scores and distances"
    ]
   },
   {
@@ -1026,36 +1042,19 @@
     "\n",
     "for xl in xl1: \n",
     "    if not xl['IntraRigidBody']:\n",
-    "        scores.update({(xl['XLUniqueSubID'],'Apo'):float(xl['ld-Score'])})\n",
+    "        scores.update({xl['XLUniqueSubID']:float(xl['IDScore'])})\n",
     "    \n",
-    "for xl in xl2: \n",
-    "    if not xl['IntraRigidBody']:\n",
-    "        scores.update({(xl['XLUniqueSubID'],'DNA'):float(xl['ld-Score'])})\n",
     "\n",
     "x=[]\n",
     "y=[]\n",
-    "for k in data[3414].features.keys():\n",
-    "    if \"Distance\" in k:\n",
-    "        ds=k.split(\"|\")[1]\n",
-    "        id=k.split(\"|\")[2]\n",
-    "        #print(scores[(id,ds)],data[3414].features[k])\n",
-    "        if (id,ds) in scores:\n",
-    "            x.append(scores[(id,ds)])\n",
-    "            y.append(float(data[3414].features[k]))\n",
-    "\n",
-    "scatter(x,y);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for k in data[0].features.keys():\n",
     "    if \"Distance\" in k:\n",
-    "        print(k)\n",
-    "        values.append([float(x.features[k]) for x in data])"
+    "        id=k.split(\"|\")[2]\n",
+    "        if id in scores:\n",
+    "            x.append(scores[id])\n",
+    "            y.append(float(data[2].features[k]))\n",
+    "\n",
+    "scatter(x,y);"
    ]
   },
   {
@@ -1075,7 +1074,7 @@
     "\n",
     "### Precomputed results <a name=\"Precomputed_Results_3\"></a>\n",
     "\n",
-    "A long modeling run was precomputed and analyzed. You can [download](ftp://salilab.org/tutorials/imp/rnapolii/results.tar.gz) it from our website, and you can [download](ftp://salilab.org/tutorials/imp/rnapolii/analysis.tar.gz) the corresponding analysis.\n",
+    "A long modeling run was precomputed and analyzed. You can [download] it from our website, and you can [download](https://zenodo.org/record/3523241#.XbtB0y2ZMY2) from the Zenodo repository.\n",
     "\n",
     "### Clustering top models using `analysis.py` <a name=\"Clustering_3\"></a>\n",
     "The `long_analysis.py` script, found in the `modeling` directory, calls the [AnalysisReplicaExchange](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1AnalysisReplicaExchange.html) macro, which finds top-scoring models, extracts coordinates, runs clustering, and does basic cluster analysis including creating localization densities for each subunit. The script generates RMF, MRC files which should be viewable in Chimera.\n",
@@ -1119,7 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "are.set_rmsd_selection(molecules=[\"Rpb4\",\"Rpb7\"])\n",
+    "are.set_rmsd_selection(molecules=[\"C31\",\"C34\"])\n",
     "\n",
     "are.cluster(30.0)"
    ]
@@ -1238,12 +1237,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rmsf1=are.rmsf(cluster=are[0],molecule='Rpb4');\n",
-    "plot(rmsf1.keys(),rmsf1.values())\n",
+    "rmsf1=are.rmsf(cluster=are[0],molecule='C31');\n",
+    "plot(list(rmsf1.keys()),list(rmsf1.values()),marker=\".\",linewidth=0)\n",
     "figure()\n",
     "\n",
-    "rmsf2=are.rmsf(cluster=are[0],molecule='Rpb7');\n",
-    "plot(rmsf2.keys(),rmsf2.values())"
+    "rmsf2=are.rmsf(cluster=are[0],molecule='C34');\n",
+    "plot(list(rmsf2.keys()),list(rmsf2.values()),marker=\".\",linewidth=0)"
    ]
   },
   {
@@ -1261,7 +1260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for mol in ['Rpb1','Rpb2','Rpb3','Rpb4','Rpb5','Rpb6','Rpb7','Rpb8','Rpb9','Rpb10','Rpb11','Rpb12']: \n",
+    "for mol in ['ABC23','ABC10beta','ABC14_5','ABC27','C25','AC40','C160','ABC10alpha','C128','AC19','C11','C17','C31','C34','C53','C37','C82']: \n",
     "    are.rmsf(cluster=are[0],molecule=mol);\n",
     "ch1=IMP.pmi.tools.ColorHierarchy(are.stath1)\n",
     "ch1.color_by_uncertainty()\n",
@@ -1274,12 +1273,12 @@
    "source": [
     "We can save the localization densities of a given cluster, for given groups of molecules.\n",
     "Now we specify the subunits (or groups or fractions of subunits) for which we want to create density localization maps. \n",
-    "`density_names` is a dictionary, where the keys are convenient names like \"Rpb4\" and the values are a list of selections. \n",
-    "The selection items can either be a domain name like \"Rpb1\" or a list like (200,300,\"Rpb1\") \n",
-    "which means residues 200-300 of component Rpb1. This enables the user to combine multiple selections \n",
+    "`density_names` is a dictionary, where the keys are convenient names like \"C31\" and the values are a list of selections. \n",
+    "The selection items can either be a domain name like \"Rpb1\" or a list like (200,300,\"C31\") \n",
+    "which means residues 200-300 of component C31. This enables the user to combine multiple selections \n",
     "for a single density calculation.\n",
     "\n",
-    "The localization densities can give a qualitative idea of the precision of a cluster. Below we show results from `cluster.1` in the provided results: the native structure without Rpb4/7 (in blue), the target density map (in mesh), and the localization densities (Rpb4 in cyan, Rpb7 in purple). The localizations are quite narrow and close to the native solution:\n",
+    "The localization densities can give a qualitative idea of the precision of a cluster. Below we show results from `cluster.1` in the provided results: the native structure without C53/C37 (in blue), the target density map (in mesh), and the localization densities (Rpb4 in cyan, Rpb7 in purple). The localizations are quite narrow and close to the native solution:\n",
     "\n",
     "<img src=\"files/images/rnapolii_localization.png\" alt=\"Localization densities\" width=\"600px\" />"
    ]
@@ -1323,42 +1322,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accuracy evaluation <a name=\"Accuracy_3\"></a>\n",
-    "We can evaluate the accuracy of a cluster against a native configuration. This is useful for benchmarking (but obviously is of no use when we don't know the 'real' structure).\n",
-    "First we add the native structure as an independent cluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "are.add_cluster([\"../rnapolii/data/native.rmf3\"])\n",
-    "\n",
-    "print(are)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then we compute the `bipartite_precision` between a given cluster and the native structure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(are.bipartite_precision(cluster1=are[0],cluster2=are[-1]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Sampling Exhaustiveness <a name=\"Sampling_Exhaustiveness_3\"></a>\n",
     "We can also determine sampling exhaustiveness by dividing the models into multiple sets, performing clustering on each set separately, and comparing the clusters. This step is left as an exercise to the reader. Some things you can try:\n",
     "* cluster two subsets of the data\n",
@@ -1371,21 +1334,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
