Get localization densities of C53 and C37
Also ask for localization densities
for the 'C53' 'C37' subunits.

--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -777,7 +777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for comp in ('C31', 'C34', 'C82'):\n",
+    "for comp in ('C31', 'C34', 'C82', 'C53', 'C37'):\n",
     "    asym = po.asym_units['%s.0' % comp]\n",
     "    loc = ihm.location.OutputFileLocation('../analysis/cluster.0/LPD_%s.mrc' % comp)\n",
     "    den = ihm.model.LocalizationDensity(file=loc, asym_unit=asym)\n",
