--- a/rnapoliii/analysis/analysis.ipynb
+++ b/rnapoliii/analysis/analysis.ipynb
@@ -258,7 +258,7 @@
         "\n",
         "The script first needs a file, `density_ranges.txt`, that defines components\n",
         "using PMI selection tuples on which we calculate localization densities.\n",
-        "Here, we ask for three localization densities for the C82, C34 and C31 subunits of the complex."
+        "Here, we ask for five localization densities for the C53, C37, C82, C34 and C31 subunits of the complex."
       ]
     },
     {
@@ -271,6 +271,8 @@
       "source": [
         "cat <<END > density_ranges.txt\n",
         "density_custom_ranges={\n",
+        "    'C53':['C53'],\n",
+        "    'C37':['C37'],\n",
         "    'C82':['C82'],\n",
         "    'C34':['C34'],\n",
         "    'C31':['C31'] }\n",
