Add examples of visualization

--- a/rnapoliii/deposition/Deposition.ipynb
+++ b/rnapoliii/deposition/Deposition.ipynb
@@ -825,15 +825,66 @@
         "\n",
         "mmCIF files can be viewed in many viewers. However, most viewers do not yet support the integrative modeling extensions, and so may only show the atomic parts of the model (if any). Integrative models can be viewed in [ChimeraX](https://www.rbvi.ucsf.edu/chimerax/) - be sure to use a recent nightly build, and open the file from the ChimeraX command line using the `format ihm` option, e.g. `open rnapoliii.cif format ihm`. (If you also want to see the DCD file, add `ensembles true` to the end of your command line to load it and then use the ChimeraX `coordset` command to manipulate the set of coordinates, e.g. `coordset slider #1.3.2`.)\n",
         "\n",
-        "[VMD](http://www.ks.uiuc.edu/Research/vmd/) is also reportedly working on support in their forthcoming 1.9.4 release."
+        "ChimeraX also supports downloading and displaying structures directly from the [PDB-Dev](https://pdb-dev.wwpdb.org/) database, for example from the ChimeraX command line `open 10 from pdbdev`.\n",
+        "\n",
+        "[VMD](http://www.ks.uiuc.edu/Research/vmd/) is also reportedly working on support in their forthcoming 1.9.4 release.\n",
+        "\n",
+        "An example view of the deposition, as rendered by ChimeraX, is shown below. The EM map is shown as a mesh, and the DSS cross-links as green dashed lines."
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "<img src=\"images/chimerax.png\" width=\"700px\" title=\"ChimeraX visualization of rnapoliii mmCIF file\" />"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Web browser \n",
+        "\n",
+        "mmCIF files can also be viewed in a web browser, using [Mol* Viewer](https://molstar.org/viewer). (Note that it currently only shows the coordinates, not the experimental information or other metadata.)\n",
+        "\n",
+        "<img src=\"images/molstar.png\" width=\"700px\" title=\"Molstar visualization of rnapoliii mmCIF file\" />"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Plain text \n",
+        "\n",
+        "mmCIF files are also just plain text files, and can be viewed in any text\n",
+        "editor (for example to check for errors, particularly for categories that\n",
+        "ChimeraX doesn't support yet). Most of the data is stored as simple tables\n",
+        "(look for the `loop_` keyword in the file). For example, the coordinates of\n",
+        "the coarse-grained beads are stored in the [_ihm_sphere_obj_site table](http://mmcif.wwpdb.org/dictionaries/mmcif_ihm.dic/Categories/ihm_sphere_obj_site.html),\n",
+        "the start of which in `rnapoliii.cif` looks like:\n",
+        "\n",
+        "```\n",
+        "loop_\n",
+        "_ihm_sphere_obj_site.id\n",
+        "_ihm_sphere_obj_site.entity_id\n",
+        "_ihm_sphere_obj_site.seq_id_begin\n",
+        "_ihm_sphere_obj_site.seq_id_end\n",
+        "_ihm_sphere_obj_site.asym_id\n",
+        "_ihm_sphere_obj_site.Cartn_x\n",
+        "_ihm_sphere_obj_site.Cartn_y\n",
+        "_ihm_sphere_obj_site.Cartn_z\n",
+        "_ihm_sphere_obj_site.object_radius\n",
+        "_ihm_sphere_obj_site.rmsf\n",
+        "_ihm_sphere_obj_site.model_id\n",
+        "1 1 1 10 A 124.581 133.035 33.707 5.992 . 1\n",
+        "2 1 11 20 A 131.316 145.472 45.948 5.992 . 1\n",
+        "3 1 21 30 A 137.311 152.343 61.883 5.992 . 1\n",
+        "4 1 31 40 A 134.626 152.521 80.483 5.992 . 1\n",
+        "```\n",
+        "\n",
+        "This simply states that a sphere representing residues 1 through 10 in chain A is centered\n",
+        "at (124.581, 133.035, 33.707) and has radius 5.992, and so on.\n"
+      ]
     }
   ],
   "metadata": {
